thirdai_platform/model_bazaar/orchestrator/kubernetes/jobs/llm_dispatch/llm_dispatch_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-dispatch
  labels:
    app: llm-dispatch
spec:
  selector:
    app: llm-dispatch
  ports:
    - name: http
      port: 80
      targetPort: 80
