thirdai_platform/model_bazaar/orchestrator/kubernetes/jobs/llm_dispatch/llm_dispatch_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-dispatch
spec:
  rules:
    - http:
        paths:
          - path: /llm-dispatch/
            pathType: Prefix
            backend:
              service:
                name: llm-dispatch
                port:
                  number: 80
